2012-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Fix the issue properly, once and for all, of how to determine
	that output has taken place and suppress the printing of bindings.

	* debug.c (debug): std_output replaced with std_debug.

	* eval.c (eval_init): Registered new *stddebug* variable.

	* stream.c (std_debug): New variable.
	(stdio_put_string): Check that stream is other than
	std_debug, to determine that output has taken place.

	* stream.h (std_debug): Declared.

	* txr.1: Added *stddebug* to documentation stub heading.

2012-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Fixing long-time (pre-GIT) bug. The object (nil) was stupidly used to
	represent empty optional output clauses, distinguishing them from
	missing clauses. This creates an ambiguity, so that an @(output)
	block which puts out a single empty line is treated as empty.
	Present but empty clauses are now represented by t.

	* match.c (do_output_line): Check for t and bail.
	(do_output): Check for t instead of (nil) and bail.

	* parser.y (o_elems_opt2): Nonterminal deleted.
	(out_clauses_opt): Empty case generates nil.
	(req_parts_opt): o_elems_opt2 replaced by o_elems_opt.
	(repeat_rep_helper): Function now keeps track of which
	clauses were specified. For those that were specified, but
	empty, it substitutes t.

	* tests/008/empty-clauses.expected: New file.

	* tests/008/empty-clauses.txr: New file.

2012-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35625

	* parser.l (BSCHR, BSYM, BTOK): New lexical definitions.
	(BRACED): New state.
	(grammar): Refactored so that braced variables are now handled
	in the BRACED state, allowing for lexical differences between
	braced variables and Lisp. This allows us to have
	the /regex/ syntax in braces, but /regex/ is just a symbol
	in the Lisp. The new #/ token is recognized and returned
	as HASH_SLASH. All rules reformatted to a more easily
	maintainble convention.

	* parser.y (HASH_SLASH): New token.
	(modifiers, lisp_regex): New nonterminals.